fix: Zoom2Extent Button: - aligned icon

--- a/src/modules/map/components/zoomButtons/zoomToExtentButton.css
+++ b/src/modules/map/components/zoomButtons/zoomToExtentButton.css
@@ -32,6 +32,7 @@
   border-radius: 50%;
   border: none;
   outline: none;
+  padding: 5px;
 }
 
 .zoom-to-extent-button:hover {
